--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,7 +66,7 @@ ul li {
 img {
   vertical-align: top;
 }
-
+/* 
 h1,
 h2,
 h3,
@@ -75,10 +75,11 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: 400;
-}
+} */
 
 #root {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
+  font-family: "Montserrat", "sans-serif";
   min-height: 100%;
 }
 
@@ -86,7 +87,7 @@ h6 {
   min-height: 100vh;
   position: relative;
 }
-
+/* 
 .App::after {
   content: "";
   position: absolute;
@@ -102,4 +103,4 @@ h6 {
   -moz-box-shadow: 4px 5px 19px 8px rgba(0, 0, 0, 0.49);
   box-shadow: 4px 5px 19px 8px rgba(0, 0, 0, 0.49);
   z-index: -100;
-}
+} */
