--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,3 +104,24 @@ h6 {
   box-shadow: 4px 5px 19px 8px rgba(0, 0, 0, 0.49);
   z-index: -100;
 } */
+
+.controls {
+  display: flex;
+  border: 1px solid #ccc;
+  border-top: 0;
+  padding: 10px;
+}
+
+.controls-right {
+  margin-left: auto;
+}
+
+.state {
+  margin: 10px 0;
+  font-family: monospace;
+}
+
+.state-title {
+  color: #999;
+  text-transform: uppercase;
+}
